--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Supraja G</div>
+                <div class="text-2">pavitra</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Data Science Aspirant</a>
+                <a href="#">web development Aspirant</a>
             </div>
         </div>
     </section>
@@ -55,7 +55,7 @@
                     <img src="profile-1.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Supraja and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm pavitra and I'm a <span class="typing-2"></span></div>
                     <p></p>
                     <a href="#">Download CV</a>
                 </div>
@@ -160,21 +160,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Supraja G</div>
+                                <div class="sub-title">pavitra</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Nidadavole</div>
+                                <div class="sub-title">vinukonda</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">gorrelasupraj@gmail.com</div>
+                                <div class="sub-title">20jg1a0511.pavitra@gvpcew.ac.in</div>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Supraja G</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.codingnepalweb.com">pavitra</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
